# Calcium

./: .gitignore  CMakeLists.txt  README.md  Show.txt
compiler/: CMakeLists.txt
compiler/include/: lexer.h  parser.h
compiler/src/: lexer.cpp  parser.cpp
compiler_settings/: CMakeLists.txt
compiler_settings/include/: compiler_settings.h
compiler_settings/src/: compiler_settings.cpp
lib/: io.c  io.ca  string.c  string.ca  string.cal
src/: main.cpp
